# src/app.js
@@ -10,6 +10,7 @@ const routes = require('./routes');
 const registrationRoutes = require('./routes/registration.routes');
 const loginRoutes = require('./routes/login.routes');
 const candidateRoutes = require('./routes/candidate.routes');
+const companyRoutes = require('./routes/company.routes');
 const notFoundHandler = require('./middleware/notFound.middleware');
 const errorHandler = require('./middleware/error.middleware');
 
@@ -35,6 +36,7 @@ app.use('/api', routes);
 app.use('/usuarios', registrationRoutes);
 app.use('/login', loginRoutes);
 app.use('/candidatos', candidateRoutes);
+app.use('/empresas', companyRoutes);
 
 app.get('/', (req, res) => {
   res.status(200).json({
